# genercy

./: Cargo.toml  Dockerbuilder  Dockerfile  README.md  db_init.sql
.devcontainer/: devcontainer.json
src/: main.rs
src/container_com/: image.rs  mod.rs
src/repository/: mod.rs
src/webserver/: error.rs  mod.rs  templater.rs
static/: form.html  script.js  style.css  ws_hw.html
static/css/: genercy.css
template/: before_main.html  index.html  test_1.html  test_include.html
templates/: container_start_button.html  container_stop_button.html  containers.html  images.html  spinner-icon.html  tera_index.html  tera_tpl.html
